--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ redis.password=1234
 
 parse.url=http://www.cbr.ru/scripts/XML_daily.asp?date_req=06/02/2024
 parse.DATE_FORMAT=dd/MM/yyyy
+
+spring.data.mongodb.database=test
